phnumber type change

--- a/appoinment.html
+++ b/appoinment.html
@@ -25,7 +25,7 @@
         </div>
         <div>
             <label for="cotnumber">Contact Number</label>
-            <input type="number" name="cotnumber" id="cotnumber">
+            <input type="tel" name="cotnumber" id="cotnumber">
         </div>
         <button type="submit">Submit</button>
     </main>
